--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,12 +1,9 @@
-spring.datasource.url=jdbc:h2:mem:lgpd
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-# H2 CLIENT
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:postgresql://localhost:5432/lgpd
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA, SQL
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+server.port=8080
