--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/lgpd
-spring.datasource.username=postgres
-spring.datasource.password=123456
-spring.datasource.driver-class-name=org.postgresql.Driver
-# JPA, SQL
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=test
+
+jwt.secret=EuNaoSeiOqueEscrever
+jwt.expiration=60480000000
