--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,10 @@ jwt.secret=EuNaoSeiOqueEscrever
 
 jwt.expiration=604800000
 
-spring.servlet.multipart.max-file-size =50MB
-spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.enabled=true
+
+spring.servlet.multipart.file-size-threshold=2KB
+
+spring.servlet.multipart.max-file-size=200MB
+
+spring.servlet.multipart.max-request-size=215MB
